HelloUltraviolet/Fixtures/RejectedSource/Statements/LetRefutablePattern/Source/Main.uv
//! Rejected statement specimen for refutable patterns in let bindings.

public procedure letRefutablePatternReference(value: i32) -> i32 {
    let 1 = value
    return value
}
